--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,13 @@
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowJs": true,
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types","./typings.d.ts"
     ],
     "lib": [
       "es2018",
